{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 23,
  "lineage": "bf51c28e-466e-c70f-2f7a-c0c56270cf0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "task_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cc2eb634c9a69bca",
            "domain": "vpc",
            "id": "eipalloc-049344a4728c075c5",
            "network_interface": "eni-02e6bf11fc1105e6f",
            "private_dns": "ip-192-168-3-202.ap-south-1.compute.internal",
            "private_ip": "192.168.3.202",
            "public_dns": "ec2-15-207-187-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.187.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:130210155743:instance/i-025cb4eb52cabbd67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025cb4eb52cabbd67",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0a9d430f00fe016",
            "private_dns": "ip-192-168-3-212.ap-south-1.compute.internal",
            "private_ip": "192.168.3.212",
            "public_ip": "13.127.213.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0290ba983a27ff82d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08c782b8f00bd2d92"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f837ada93e966cdf",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c782b8f00bd2d92"
            ]
          },
          "dependencies": [
            "aws_security_group.Bastion_Host_SG",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MySQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ca6b22ca88bdbea",
            "arn": "arn:aws:ec2:ap-south-1:130210155743:instance/i-0076cca18c4001866",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0076cca18c4001866",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06bbab5f949b3aeb2",
            "private_dns": "ip-192-168-2-64.ap-south-1.compute.internal",
            "private_ip": "192.168.2.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e0e0cdaf69539fb0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079dead1c31261be7",
            "tags": {
              "Name": "MySQL-OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01bc04bba67cc254c"
            ]
          },
          "dependencies": [
            "aws_security_group.MySQL_SG",
            "aws_subnet.private_subnet",
            "tls_private_key.task_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ca6b22ca88bdbea",
            "arn": "arn:aws:ec2:ap-south-1:130210155743:instance/i-001b00e5137af0fa7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001b00e5137af0fa7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099a1127956693505",
            "private_dns": "ip-192-168-3-166.ap-south-1.compute.internal",
            "private_ip": "192.168.3.166",
            "public_ip": "13.232.197.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-061b68c73dc76ae57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f837ada93e966cdf",
            "tags": {
              "Name": "WordPress-OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0205f9f3cfe985d0b"
            ]
          },
          "dependencies": [
            "aws_security_group.Bastion_Host_SG",
            "aws_security_group.WP_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc",
            "tls_private_key.task_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:internet-gateway/igw-0f61c8a0775451d43",
            "id": "igw-0f61c8a0775451d43",
            "owner_id": "130210155743",
            "tags": {
              "Name": "task_ig"
            },
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "task_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049344a4728c075c5",
            "id": "nat-02219a0135353d8a7",
            "network_interface_id": "eni-02e6bf11fc1105e6f",
            "private_ip": "192.168.3.202",
            "public_ip": "15.207.187.146",
            "subnet_id": "subnet-0f837ada93e966cdf",
            "tags": {
              "Name": "task NAT"
            }
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0813f5608d17a208b",
            "owner_id": "130210155743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02219a0135353d8a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT_RouteTable"
            },
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_nat_gateway.task_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e05a92c45982e90e",
            "owner_id": "130210155743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f61c8a0775451d43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router_task"
            },
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NAT_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0215ca0a9042d9c12",
            "route_table_id": "rtb-0813f5608d17a208b",
            "subnet_id": "subnet-079dead1c31261be7"
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_nat_gateway.task_nat",
            "aws_route_table.nat_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "router-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bed11020d0d2e19",
            "route_table_id": "rtb-0e05a92c45982e90e",
            "subnet_id": "subnet-0f837ada93e966cdf"
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_route_table.router",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion_Host_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:security-group/sg-08c782b8f00bd2d92",
            "description": "SSH For Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c782b8f00bd2d92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-Host-SG",
            "name_prefix": null,
            "owner_id": "130210155743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-Host-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySQL_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:security-group/sg-01bc04bba67cc254c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bc04bba67cc254c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL redirection",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c782b8f00bd2d92"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_MySQL",
            "name_prefix": null,
            "owner_id": "130210155743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_security_group.Bastion_Host_SG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:security-group/sg-0205f9f3cfe985d0b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0205f9f3cfe985d0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http redirection",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c782b8f00bd2d92"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WordPress_SG",
            "name_prefix": null,
            "owner_id": "130210155743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WordPress_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_security_group.Bastion_Host_SG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:subnet/subnet-079dead1c31261be7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-079dead1c31261be7",
            "map_public_ip_on_launch": false,
            "owner_id": "130210155743",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:subnet/subnet-0f837ada93e966cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0f837ada93e966cdf",
            "map_public_ip_on_launch": false,
            "owner_id": "130210155743",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0ab07d2a8ec73416d"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:vpc/vpc-0ab07d2a8ec73416d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0227e8330c7970596",
            "default_route_table_id": "rtb-0cc658f223fdb3d97",
            "default_security_group_id": "sg-0f3f3da44b1138951",
            "dhcp_options_id": "dopt-9d7c86f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ab07d2a8ec73416d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cc658f223fdb3d97",
            "owner_id": "130210155743",
            "tags": {
              "Name": "Task-4"
            }
          }
        }
      ]
    }
  ]
}